K8S/driverservice-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: driverservices-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: driverservice
  template:
    metadata:
      labels:
        app: driverservice
    spec:
      containers:
      - name: driverservice
        image: rizhy/driverservice:latest
        resources:
          limits:
            memory: "500Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: driverservices-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: driverservice
  ports:
  - name: driverservice
    protocol: TCP
    port: 80
    targetPort: 80
