K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: banteng-driver.com
    http:
      paths:
      - pathType: Prefix
        path: "/graphql"
        backend:
          service:
            name: driverservices-clusterip-srv
            port:
              number: 80
  - host: banteng-admin.com
    http:
      paths:
      - pathType: Prefix
        path: "/graphql"
        backend:
          service:
            name: adminservices-clusterip-srv
            port:
              number: 80
  - host: banteng-pengguna.com
    http:
      paths:
      - pathType: Prefix
        path: "/graphql"
        backend:
          service:
            name: penggunaservices-clusterip-srv
            port:
              number: 80
